--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="card my-3">
                 <div class="card-body">
 
-                    <h5 class="card-title text-center"><i class="bi bi-filetype-html BIcon"></i>Cloud Computing
+                    <h5 class="card-title text-center"><i class="bi bi-filetype-html BIcon"></i>Python
                     </h5>
                     <p class="card-text">
                         I have learnt Python in Nptel</p>
@@ -140,7 +140,7 @@
             <div class="card my-3">
                 <div class="card-body">
 
-                    <h5 class="card-title text-center"><i class="bi bi-filetype-html BIcon"></i>AI Fundamentals
+                    <h5 class="card-title text-center"><i class="bi bi-filetype-html BIcon"></i>HTML5
                     </h5>
                     <p class="card-text">
                         I have learnt HTML5 in Infosys spring board</p>
